deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-container-2-depl
  labels:
    app: flask-container-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-container-2
  template:
    metadata:
      labels:
        app: flask-container-2
    spec:
      containers:
      - name: flask-container-2
        image: ghcr.io/remla23-team12/model-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-container-2-service
spec:
  selector:
    app: flask-container-2
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-container-1-depl
  labels:
    app: flask-container-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-container-1
  template:
    metadata:
      labels:
        app: flask-container-1
    spec:
      containers:
      - name: flask-container-1
        image: ghcr.io/remla23-team12/app:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-container-1-service
spec:
  selector:
    app: flask-container-1
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-container-1-service
            port:
              number: 8081
